bugfixes for alignment

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -166,6 +166,18 @@ footer a {
     opacity: 0;
 }
 
+.center {
+    text-align: center;
+}
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
 .popup {
     position: fixed;
     display:flex;
